# bmstu-5sem-tests_software-v3

./: .gitignore  1.2.three.cpp  1.three.cpp  2.test.cpp  3.2.test.cpp  3.test.cpp  5.excepts.hpp  5.five.cpp  lastgame_player_1.cfg  lastgame_player_2.cfg  lastgame_shots_player_1.cfg  lastgame_shots_player_2.cfg  makefile  newgame_player_1.cfg  newgame_player_2.cfg  readme.md  saved_game.cfg  three.hpp
auth_test/: 1.test.cpp  CMakeLists.txt  load.sh  readme.md
auth_test/include/: 5.five.cpp
